ash: Create UserCardView from user session info

Use user type from user session info instead of LoginStatus when
creating UserCardView. The user session info contains the true data
of the user. LoginStatus is deprecated and also used to temporarily
lock down system tray when there is system modal dialog.

BUG=734011

Change-Id: I295ffaa43fa8a91f0329031758c155a97468e473